--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 blinker==1.4
+certifi==2019.3.9
+chardet==3.0.4
 Click==7.0
 Flask==1.0.3
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.4.0
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 pkg-resources==0.0.0
 psycopg2==2.8.2
+requests==2.22.0
 SQLAlchemy==1.3.3
+urllib3==1.25.3
 Werkzeug==0.15.4
